fix error contrast

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -144,6 +144,11 @@ p {
     width: 100%;
     height: auto;
 }
+
+#contact-image {
+    width: 100%;
+    height: 250px;
+}
 article {
     background-color: rgba(17, 14, 84, 0.819);
     max-width: 600px;
